part3/ch13 - Demystifying c++ IO CLEAR

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # unix 실행파일 무시 트랜잭션
-# 모두 무시 -> 확장자 있는 것 비무시 -> 폴더 비무시
+# 모두 무시 -> .cpp, .h 파일만 비무시 -> 폴더 비무시
 *
-!*.*
+!*.cpp
+!*.h
 !*/
 
 # vscode 폴더 무시
