part3/ch14 - Handling Errors CLEAR

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # unix 실행파일 무시 트랜잭션
-# 모두 무시 -> .cpp, .h 파일만 비무시 -> 폴더 비무시
+# 모두 무시 -> .cpp, .h, .cppm 확장 파일만 비무시 -> 폴더 비무시
 *
 !*.cpp
 !*.h
+!*.cppm
 !*/
 
 # vscode 폴더 무시
